ext/nbis/misc/sivv/include/fingerprint_wrapper.h

// C-compatible point structure
typedef struct {
    int x;
    int y;
} CPoint2i;
// C wrapper function
CPoint2i find_fingerprint_center_morph_c(
        const unsigned char* data,
        int width,
        int height,
        int* xbound_min,
        int* xbound_max,
        int* ybound_min,
        int* ybound_max
);