src/ffi_nbis.rs

// src/ffi.rs
#![allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    clippy::upper_case_acronyms
)]
use std::os::raw::{c_char, c_double, c_int, c_uchar, c_void};

pub const DEFAULT_BOZORTH_MINUTIAE: usize = 150;
pub const MAX_BOZORTH_MINUTIAE: usize = 200; // <-- match bozorth.h

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub(crate) struct xyt_struct {
    pub nrows: c_int,
    pub xcol: [c_int; MAX_BOZORTH_MINUTIAE],
    pub ycol: [c_int; MAX_BOZORTH_MINUTIAE],
    pub theta: [c_int; MAX_BOZORTH_MINUTIAE],
}

extern "C" {
    pub(crate) fn bozorth_main(probe: *const xyt_struct, gallery: *const xyt_struct) -> c_int;
}

////////////////////////////////////////////////////////////////////////////////
//  Structs copied verbatim from <lfs.h>
////////////////////////////////////////////////////////////////////////////////

#[repr(C)]
#[derive(Debug)]
pub(crate) struct MINUTIA {
    pub x: c_int,
    pub y: c_int,
    pub ex: c_int,
    pub ey: c_int,
    pub direction: c_int,
    pub reliability: c_double,
    pub r#type: c_int, // `type` is a Rust keyword – use a raw identifier
    pub appearing: c_int,
    pub feature_id: c_int,
    pub nbrs: *mut c_int,
    pub ridge_counts: *mut c_int,
    pub num_nbrs: c_int,
}

#[repr(C)]
#[derive(Debug)]
pub(crate) struct MINUTIAE {
    pub alloc: c_int,
    pub num: c_int,
    pub list: *mut *mut MINUTIA, // C: MINUTIA **list;
}

#[repr(C)]
#[derive(Debug)]
pub(crate) struct LFSPARMS {
    /* ------------ Image controls ------------------ */
    pub pad_value: c_int,
    pub join_line_radius: c_int,

    /* ------------ Map controls -------------------- */
    pub blocksize: c_int,
    pub windowsize: c_int,
    pub windowoffset: c_int,
    pub num_directions: c_int,
    pub start_dir_angle: c_double,
    pub rmv_valid_nbr_min: c_int,
    pub dir_strength_min: c_double,
    pub dir_distance_max: c_int,
    pub smth_valid_nbr_min: c_int,
    pub vort_valid_nbr_min: c_int,
    pub highcurv_vorticity_min: c_int,
    pub highcurv_curvature_min: c_int,
    pub min_interpolate_nbrs: c_int,
    pub percentile_min_max: c_int,
    pub min_contrast_delta: c_int,

    /* ------------ DFT controls -------------------- */
    pub num_dft_waves: c_int,
    pub powmax_min: c_double,
    pub pownorm_min: c_double,
    pub powmax_max: c_double,
    pub fork_interval: c_int,
    pub fork_pct_powmax: c_double,
    pub fork_pct_pownorm: c_double,

    /* ------------ Binarisation controls ----------- */
    pub dirbin_grid_w: c_int,
    pub dirbin_grid_h: c_int,
    pub isobin_grid_dim: c_int,
    pub num_fill_holes: c_int,

    /* ------------ Minutiae detection -------------- */
    pub max_minutia_delta: c_int,
    pub max_high_curve_theta: c_double,
    pub high_curve_half_contour: c_int,
    pub min_loop_len: c_int,
    pub min_loop_aspect_dist: c_double,
    pub min_loop_aspect_ratio: c_double,

    /* ------------ Linking ------------------------- */
    pub link_table_dim: c_int,
    pub max_link_dist: c_int,
    pub min_theta_dist: c_int,
    pub maxtrans: c_int,
    pub score_theta_norm: c_double,
    pub score_dist_norm: c_double,
    pub score_dist_weight: c_double,
    pub score_numerator: c_double,

    /* ------------ False-minutiae removal ---------- */
    pub max_rmtest_dist: c_int,
    pub max_hook_len: c_int,
    pub max_half_loop: c_int,
    pub trans_dir_pix: c_int,
    pub small_loop_len: c_int,
    pub side_half_contour: c_int,
    pub inv_block_margin: c_int,
    pub rm_valid_nbr_min: c_int,
    pub max_overlap_dist: c_int,
    pub max_overlap_join_dist: c_int,
    pub malformation_steps_1: c_int,
    pub malformation_steps_2: c_int,
    pub min_malformation_ratio: c_double,
    pub max_malformation_dist: c_int,
    pub pores_trans_r: c_int,
    pub pores_perp_steps: c_int,
    pub pores_steps_fwd: c_int,
    pub pores_steps_bwd: c_int,
    pub pores_min_dist2: c_double,
    pub pores_max_ratio: c_double,

    /* ------------ Ridge counting ------------------ */
    pub max_nbrs: c_int,
    pub max_ridge_steps: c_int,
}

////////////////////////////////////////////////////////////////////////////////
//  FFI function prototypes (unchanged)
////////////////////////////////////////////////////////////////////////////////

extern "C" {
    // --  Core entry point ---------------------------------------------------
    pub(crate) fn get_minutiae(
        ominutiae: *mut *mut MINUTIAE,
        oquality_map: *mut *mut c_int,
        odirection_map: *mut *mut c_int,
        olow_contrast_map: *mut *mut c_int,
        olow_flow_map: *mut *mut c_int,
        ohigh_curve_map: *mut *mut c_int,
        omap_w: *mut c_int,
        omap_h: *mut c_int,
        obdata: *mut *mut c_uchar,
        obw: *mut c_int,
        obh: *mut c_int,
        obd: *mut c_int,
        idata: *mut c_uchar,
        iw: c_int,
        ih: c_int,
        id: c_int,
        ppmm: c_double,
        lfsparms: *const LFSPARMS,
    ) -> c_int;

    // --  Library-provided destructors --------------------------------------
    pub(crate) fn free_minutiae(ptr: *mut MINUTIAE);
    pub(crate) fn free(ptr: *mut c_void); // libc::free
}

extern "C" {
    pub(crate) fn sivv_ffi_from_bytes(data: *const u8, width: c_int, height: c_int) -> *mut c_char;
    pub(crate) fn sivv_ffi_free_bytes(ptr: *mut c_char);
}

#[repr(C)]
pub struct CPoint2i {
    pub x: c_int,
    pub y: c_int,
}

extern "C" {
    pub(crate) fn find_fingerprint_center_morph_c(
        data: *const u8,
        width: c_int,
        height: c_int,
        xbound_min: *mut c_int,
        xbound_max: *mut c_int,
        ybound_min: *mut c_int,
        ybound_max: *mut c_int,
    ) -> CPoint2i;
}
